# Git-YD

./: README.md  a.py  setup.cfg
src/alfi_and_yair_py_module/: the_script.py
src/alfi_and_yair_py_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
