[metadata]
name = alfi_and_yair_py_module
version = 0.0.1
author = Dvir Alfi and Yair Ben David
author_email = nba.dvir@gmail.com
description = A test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dviralfi/Git-YD-fork
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src